--- a/simple-sample/package.json
+++ b/simple-sample/package.json
@@ -8,7 +8,7 @@
   "license": "MIT",
   "devDependencies": {},
   "dependencies": {
-    "noble-winrt": "github:Timeular/noble-winrt",
-    "jinsmemesdk-node-noble-x": "^0.11.1"
+    "noble-uwp": "^0.6.2",
+    "jinsmemesdk-node-noble-x": "^0.12.2"
   }
 }
